# resforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
resforge/: __init__.py  _utils.py  types.py  utils.py
resforge/android/: __init__.py  compose.py  dimension.py  plural.py  types.py  values.py
resforge/apple/: __init__.py  _base.py  _colorset.py  base.py  catalog.py  colorset.py  types.py
resforge/codegen/: kotlin.py
src/resforge/: _utils.py
src/resforge/android/: compose.py
src/resforge/apple/: _colorset.py
tests/: test_android.py  test_android_compose.py  test_android_values.py  test_atomic_write.py  test_codegen_kotlin.py  test_ios_catalog.py  test_types.py
