[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resforge"
version = "0.2.0"
description = "A type-safe Python DSL for cross-platform mobile resource generation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ondrej Kipila", email = "ondrej@kipila.dev" }]
keywords = [
  "dsl",
  "design-tokens",
  "android-xml",
  "xcassets",
  "code-generation",
  "white-label",
  "mobile-infra",
  "type-safety",
  "automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://kipila.dev"
Repository = "https://github.com/ok100/resforge"
