[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resforge"
version = "0.2.0"
description = "A type-safe Python DSL for cross-platform mobile resource generation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ondrej Kipila", email = "ondrej@kipila.dev" }]
keywords = [
  "dsl",
  "design-tokens",
  "android-xml",
  "xcassets",
  "code-generation",
  "white-label",
  "mobile-infra",
  "type-safety",
  "automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://kipila.dev"
Repository = "https://github.com/ok100/resforge"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
  "ANN001",
  "ANN002",
  "ANN003",
  "COM812",
  "COM819",
  "D100",
  "D102",
  "D104",
  "D105",
  "D107",
  "D206",
  "D300",
  "D401",
  "E111",
  "E114",
  "E117",
  "FIX",
  "I001",
  "PLR2004",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "TD",
  "W191",
]
ignore = [
fixable = ["ALL"]
