[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resforge"
version = "0.3.0"
description = "A type-safe Python DSL for cross-platform mobile resource generation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ondrej Kipila", email = "ondrej@kipila.dev" }]
keywords = [
  "dsl",
  "design-tokens",
  "android-xml",
  "xcassets",
  "code-generation",
  "white-label",
  "mobile-infra",
  "type-safety",
  "automation",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = ["pytest", "defusedxml"]

[project.urls]
Homepage = "https://kipila.dev"
Repository = "https://github.com/kipila-dev/resforge"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN001",
  "ANN002",
  "ANN003",
  "COM812",
  "COM819",
  "D100",
  "D102",
  "D104",
  "D105",
  "D107",
  "D206",
  "D300",
  "D401",
  "E111",
  "E114",
  "E117",
  "FIX",
  "I001",
  "PLR2004",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "TD",
  "W191",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
   "ANN201",
   "D101",
   "D103",
   "EM101",
   "S101",
   "TRY301",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
